kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/invalid/ObjectAndVoid.kmt
/* $Id: ObjectAndVoid.kmt,v 1.1 2007-09-10 08:35:08 cfaucher Exp $ */

//Test special types Object and Void

package toto;


require kermeta

using kermeta::standard
using kermeta::language::structure


class A {

	operation op1() : Void is do end
	
	operation op2() is do end
	
	operation op3() : Object is do end
	
	operation op4( o : Object) is do end 

}



class Test {

	attribute a : A
	
	attribute o : Object
	
	attribute v : Void 
	
	operation test1() is do
		v := a
	end
	
	operation test2() is do
		a := a.op3
	end
	
	operation test3() is do
		v := 1
	end
	
	operation test5() is do
		v := a.op3
	end

	


}

/* END OF FILE */